# Seq2Seq

./: .gitignore  clean_reqs.txt  inference.md  inference.txt  kaggle_inference.txt  main.py  pyproject.toml  requirements.txt  train.py  trainer.py  validate.py
.github/workflows/: bert_wf.yaml
configs/: bert.yaml  seq2seq_config.py  seq2seq_main.yaml
configs/decoder/: attention.yaml  lstm.yaml  transformer.yaml
configs/encoder/: attention.yaml  lstm.yaml  transformer.yaml
data/: seq2seq_dataset.py
data/processed/: src_vocab.pkl  src_vocab_5k_data.pkl  test.pt  test_5k_data.pt  trg_vocab.pkl  trg_vocab_5k_data.pkl
seq2seq/: __init__.py  registry.py  schemas.py  schemas_hydra.py
seq2seq/data/: __init__.py  load_dataset.py  preprocessing.py  seq2seq_dataloader.py
seq2seq/inference/: experiment.md  final_model_inference.md  french2eng_inference.md  inference.md  inference.txt  trans_inference.md  transformer.md  transformer_2.md  validate.py
seq2seq/modules/: attention.py  bert.py  decoder.py  encoder.py  encoding.py  seq2seq.py
seq2seq/training/: __init__.py  train.py  train_bert.py  trainer.py
src/seq2seq/: __init__.py  data_loader.py  registry.py  schemas.py
src/seq2seq/data/: __init__.py  dataloader.py  load_dataset.py  preprocessing.py
src/seq2seq/modules/: decoder.py  encoder.py  seq2seq.py
tests/: test_decoder.py  test_encoder.py  test_seq2seq.py
